gke/service.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: abctools
    name: abctools-svc
spec:
    ports:
    - port: 80
      targetPort: 8080
    selector:
        app: abctools
    type: NodePort
